# tuillama

./: Cargo.toml  README.md  TODO.md  config.toml.example
src/: main.rs
src/modules/: app_state.rs  cache.rs  clipboard.rs  config.rs  data_models.rs  events.rs  markdown.rs  ollama_payloads.rs  ollama_streaming.rs  protocol.rs  runtime.rs  sanitization.rs  storage.rs  syntect_theme.rs  theme.rs  ui.rs
