[package]
name = "tuillama"
version = "0.4.2"
edition = "2024"

[dependencies]
anyhow = "1"
ratatui = "0.27"
crossterm = "0.27"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync", "process"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures-util = "0.3"
directories = "5"
chrono = "0.4"
regex = "1"
tempfile = "3"
toml = "0.8"
rand = "0.8"
unicode-segmentation = "1.12.0"
unicode-width = "0.2.1"
